--- a/index.html
+++ b/index.html
@@ -11,5 +11,29 @@
 </head>
 <body>
 
+<header>
+    <div class="page-header-box">
+        <div class="container page-header">
+            <a href="#">BestShop</a>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Why Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Benefits</a>
+                    </li>
+                    <li>
+                        <a href="#">Prices</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</header>
+
 </body>
 </html>
