--- a/index.html
+++ b/index.html
@@ -35,5 +35,42 @@
     </div>
 </header>
 
+<section class="main-section">
+    <div class="container main-section__content">
+        <h1>Sell More!</h1>
+        <p>Open shop on our platform and increase your sales</p>
+        <button><a href="#">Open your shop</a></button>
+    </div>
+    <div class="main-section__photo">
+    </div>
+</section>
+
+<section class="first-section">
+    <h2>The most popular sales platform in country </h2>
+    <div class="first-section__content">
+        <div class="first-section__content__item">
+            <div class="circle red">
+                <img src="./img/Person.svg">
+            </div>
+            <span>100000+</span>
+            <span>daily entries</span>
+        </div>
+        <div class="first-section__content__item">
+            <div class="circle blue">
+                <img src="./img/Eye.svg">
+            </div>
+            <span>2000000+</span>
+            <span>seen products every day</span>
+        </div>
+        <div class="first-section__content__item">
+            <div class="circle green">
+                <img src="./img/Catalog.svg">
+            </div>
+            <span>10000+</span>
+            <span>added posts daily</span>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
