--- a/index.html
+++ b/index.html
@@ -72,5 +72,57 @@
     </div>
 </section>
 
+<section class="second-section">
+    <div class="container second-section__content">
+        <div class="second-section__content__article">
+            <div class="second-section__article--text">
+                <h2>Be always first</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, tortor. Proin id tortor in consequat auctor tincidunt. Maecenas semper
+                    leo. Donec nunc. Sed et malesuada tincidunt.
+                </p>
+            </div>
+            <div class="second-section__article--image">
+                <div class="square"></div>
+                <img src="img/Macbook2.png">
+            </div>
+        </div>
+        <div class="second-section__content__article">
+            <div class="second-section__article--image">
+                <div class="second-section__article--image--circle"></div>
+                <img src="img/iPhone2.png">
+            </div>
+            <div class="second-section__article--text">
+                <h2>Your shop is where you are!</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, tortor. Proin id tortor in consequat auctor tincidunt. Maecenas semper
+                    leo. Donec nunc. Sed et malesuada tincidunt.
+                </p>
+            </div>
+        </div>
+        <div class="second-section__last-article">
+            <div class="second-section__last-article--left">
+                <div class="second-section__last-article--left-text">
+                    <h2>Increase recognition your brand!</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, tortor. Proin id tortor in consequat auctor tincidunt. Maecenas semper
+                        leo. Donec nunc. Sed et malesuada tincidunt.
+                    </p>
+                </div>
+            </div>
+            <div class="second-section__last-article--right">
+                <img src="img/Trumpet.png">
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="container third-section">
+</section>
+
+<footer>
+
+</footer>
+
 </body>
 </html>
